Added a sectioning to index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>
+sf65 - A source formatter for 6502 assembly
+</title>
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1> - sf65 - </h1>
+    <h2> A source formatter for 6502 assembly</h2>
+    <hr/>
+    
+    <ul>
+        <li>Introduction</li>
+        <li>Usage</li>
+        <li>Features</li>
+        <li>Command line options</li>
+    </ul>
 </body>
 </html>
 
