Added links to homepage for subpages (without having target, currently)

--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+ "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html lang="en-us">
 <head>
-<title>
+<title align="center">
 sf65 - A source formatter for 6502 assembly
 </title>
 </head>
 
 <body>
-<h1> - sf65 - </h1>
-    <h2> A source formatter for 6502 assembly</h2>
-    <hr/>
+<h1 align="center"> - sf65 - </h1>
+    <h2 align="center"> A source formatter for 6502 assembly</h2>
+    <hr/ width="50%", align="center">
     
     <ul>
-        <li>Introduction</li>
-        <li>Usage</li>
-        <li>Features</li>
-        <li>Command line options</li>
+        <li><a href="html/introduction.html">Introduction</a></li>
+	<li><a href="html/usage.html">Usage</a></li>
+        <li><a href="html/features.html">Features</a></li>
+        <li><a href="html/cmdopt.html">Command line options</a></li>
     </ul>
 </body>
 </html>
