Added testcode for formatting examples originated from tass format. tried embed tag with html page to include code. Added some formatting examples.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+ <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1"> 
 <html lang="en-us">
 <head>
 <title align="center">
@@ -14,9 +15,10 @@ sf65 - A source formatter for 6502 assembly
     
     <ul>
         <li><a href="html/introduction.html">Introduction</a></li>
-	<li><a href="html/usage.html">Usage</a></li>
+        <li><a href="html/usage.html">Usage</a></li>
         <li><a href="html/features.html">Features</a></li>
         <li><a href="html/cmdopt.html">Command line options</a></li>
+        <li><a href="html/examples.html">Examples</a></li>
     </ul>
 </body>
 </html>
